--- a/lab5/style.css
+++ b/lab5/style.css
@@ -1,3 +1,46 @@
+.align-center-container{
+    display: flex;               
+    flex-direction: column;      
+    align-items: center; 
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
+.align-left {
+    align-self: flex-start; 
+    margin-left: 0;
+}
+
+button{
+    appearance: button;
+    backface-visibility: hidden;
+    background-color: #405cf5;
+    border-radius: 6px;
+    border-width: 0;
+    box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset,rgba(50, 50, 93, .1) 0 2px 5px 0,rgba(0, 0, 0, .07) 0 1px 1px 0;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    font-size: 100%;
+    height: 44px;
+    line-height: 1.15;
+    margin: 12px 0 0;
+    outline: none;
+    overflow: hidden;
+    padding: 0 25px;
+    position: relative;
+    text-align: center;
+    text-transform: none;
+    transform: translateZ(0);
+    transition: all .2s,box-shadow .08s ease-in;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+
+/* task 1 */
+
 #registration-form{
     padding: 0px 20px 20px 40px;
     border: 2px solid black;
@@ -38,37 +81,23 @@ input {
     margin-left: -50px;
 }
 
-#submit-button{
-    appearance: button;
-    backface-visibility: hidden;
-    background-color: #405cf5;
-    border-radius: 6px;
-    border-width: 0;
-    box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset,rgba(50, 50, 93, .1) 0 2px 5px 0,rgba(0, 0, 0, .07) 0 1px 1px 0;
-    box-sizing: border-box;
-    color: #fff;
-    cursor: pointer;
-    font-size: 100%;
-    height: 44px;
-    line-height: 1.15;
-    margin: 12px 0 0;
-    outline: none;
-    overflow: hidden;
-    padding: 0 25px;
-    position: relative;
-    text-align: center;
-    text-transform: none;
-    transform: translateZ(0);
-    transition: all .2s,box-shadow .08s ease-in;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    width: 50%;
-  }
 
 
 
 /* task 2 */
+
+
+#color-picker-container{
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+}
+
+#color-picker{
+    width: 200px;
+    height: 100px;
+    margin-top: 20px;
+}
 
 table, td {
     border: 1px solid black;
